--- a/src/sections/Home/HomeHeader/HomeHeader.scss
+++ b/src/sections/Home/HomeHeader/HomeHeader.scss
@@ -20,18 +20,18 @@
   @media #{$xxl} {
     height: 80vh;
   }
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    background: rgba($color: #000000, $alpha: 0.5);
-    @media #{$sm,$md,$lg} {
-      height: 97%;
-    }
-  }
+  //&::before {
+  //  content: "";
+  //  position: absolute;
+  //  top: 0;
+  //  z-index: -1;
+  //  width: 100%;
+  //  height: 100%;
+  //  background: rgba($color: #000000, $alpha: 0.5);
+  //  @media #{$sm,$md,$lg} {
+  //    height: 97%;
+  //  }
+  //}
   .description-column {
     color: $white;
     text-align: center;
